@@ -3,6 +3,7 @@ Version: 1.10.0
 Game Versions: v1.1.0,v1.1.1,v1.1.2,v1.1.3,v1.1.4,v1.1.5,v1.1.6
 * Feature: Enable module translation (support for English and Japanese language).
 * Fix: The rewards have been fixed and now work as intended.
+* Fix: The nearest settlement name is now correctly displayed in the party death message.
 * Fix: Address Bannerlord.Harmony dependency warning on startup. No warnings should be displayed anymore.
 ---------------------------------------------------------------------------------------------------
 Version: 1.9.6
